--- a/public/view/myWallet.html
+++ b/public/view/myWallet.html
@@ -100,25 +100,25 @@
     <!-- Modal Add Funds -->
     <div class="modal" id="modalAddFunds" style="display: none;">
         <form class="modal-content">
-            <div class="container">
+            <div class="container moderator-evaluation event-form">
                 <div class="modal-header">
-                    <h1>Add Funds</h1>
+                    <h1>Add Funds</h1> 
                 </div>
 
                 <label for="fName">Name: </label>
-                <input type="text" id="fName" placeholder="Enter your name">
+                <input type="text" id="fName" class="otherReasonContainer" placeholder="Enter your name">
 
                 <label for="fCardNumber">Card Number:</label>
-                <input type="text" id="fCardNumber" placeholder="Enter card number">
+                <input type="text" id="fCardNumber" class="otherReasonContainer" placeholder="Enter card number">
 
                 <label for="fCVC">CVC:</label>
-                <input type="text" id="fCVC" placeholder="Enter CVC">
+                <input type="text" id="fCVC" class="otherReasonContainer" placeholder="Enter CVC">
 
                 <label for="fExpirationDate">Expiration Date:</label>
-                <input type="text" id="fExpirationDate" placeholder="Enter expiration date">
+                <input type="text" id="fExpirationDate" class="otherReasonContainer" placeholder="Enter expiration date">
 
                 <label for="fAmountAdd">Amount ($):</label>
-                <input type="number" id="fAmountAdd" placeholder="Enter amount to add" min="0" step="0.01">
+                <input type="text" id="fAmountAdd" class="otherReasonContainer" placeholder="Enter amount to add" min="0" step="0.01">
             </div>
 
             <div class="modal-footer">
@@ -131,8 +131,8 @@
      <!-- Modal Withdraw Funds -->
     <div class="modal" id="modalWithdrawFunds" style="display: none;">
         <form class="modal-content">
-            <div class="container">
-                <div class="modal-header">
+            <div class="container moderator-evaluation event-form">
+                <div class="modal-header ">
                     <h1>Withdraw Funds</h1>
                 </div>
 
@@ -161,7 +161,7 @@
                     </div>
 
                     <label for="fWithdrawAmount">Amount ($):</label>
-                    <input type="number" id="fWithdrawAmount" placeholder="Enter amount to withdraw" min="0" step="0.01">
+                    <input type="text" id="fWithdrawAmount" placeholder="Enter amount to withdraw" min="0" step="0.01">
                 </div>
 
                 <div class="modal-footer">
