--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -12,7 +12,7 @@
     --icon-color: #44d888;
 }
 
-* {
+* { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -22,13 +22,13 @@ body {
     background: #000; /* Fundo preto */
     background: radial-gradient(
         circle at left, 
-        rgb(44, 156, 96), /* Feixe de luz verde mais escuro */
+        #2c9c60, /* Feixe de luz verde mais escuro */
         #44d888 70% /* Transição para o fundo escuro */
       ),
       #000; /* Fundo preto */
     color: var(--text-color);
     overflow-x: hidden;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Montserrat, sans-serif;
 }
 
 .app-container {
@@ -247,9 +247,9 @@ body {
 }
 
 .logoPucBet {
-    width: 250px;  
-    margin-left: -20px; 
-    padding-right: 25px;
+    width: 210px;  
+    margin-top: 12px;
+    margin-left: -10px;
 }
 
 
@@ -666,7 +666,7 @@ header.projects-section-header button:first-child {
 }
 
 #showHideBalance:hover {
-    transform: scale(1.2); /* Aumenta o botão no hover */
+    transform: scale(0.8); /* Aumenta o botão no hover */
     color: #ffff; /* Altere para uma cor desejada no hover */
 }
 #balance-container{
@@ -713,22 +713,25 @@ header.projects-section-header button:first-child {
 }
 
 /*BOTÃO CREATE EVENT (ADD NEW EVENT)*/
-.btn-primary{
-    background-color: #28a745;
+.btn-primary {
+    background-color: #2c9c60;
     color: white;
     border: none;
-    padding: 10px 20px;  /* Espaçamento */
+    padding: 10px 20px;
     font-size: 18px;
-    cursor: pointer;  /* Cursor pointer */
-    border-radius: 5px;  /* Bordas arredondadas */
+    cursor: pointer;
+    border-radius: 5px;
     display: flex;
     align-items: center;
+    transition: all 0.3s ease;
   }
-
-.btn-primary:hover{
-    background-color: var(--background-light);
+  
+  .btn-primary:hover {
+    background-color: #1f7f4a;
+    transform: translateY(-1px);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
   }
-
+  
   .loader-container {
     position: fixed;
     top: 0;
@@ -780,3 +783,83 @@ header.projects-section-header button:first-child {
         transform: rotate(1turn);
     }
 }
+
+/* Pop-up de alerta*/ 
+
+.alert-wrapper {
+    font-family: "Montserrat", sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  .errorPopup {
+    width: 360px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.1);
+    color: #333333;
+    text-align: center;
+    border-radius: 15px;
+    padding: 35px 25px;
+    backdrop-filter: blur(15px);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+  }
+  
+  .errorPopup.hidden {
+    transform: scale(0.9);
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  .error-icon {
+    width: 60px;
+    height: 60px;
+    margin-bottom: 25px;
+    color: #44d888; /* Cor do ícone */
+    font-size: 3rem;
+  }
+  
+  .errorPopup p {
+    margin-bottom: 25px;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #555555;
+    font-weight: 500;
+  }
+  
+  .close-btn {
+    background-color: transparent;
+    border: 1px solid #44d888; 
+    color: #44d888; 
+    font-size: 16px;
+    font-weight: 600;
+    padding: 12px 24px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1), 0 -4px 12px rgba(255, 255, 255, 0.2);
+    outline: none;
+  }
+  
+  .close-btn:hover {
+    background-color: #44d888; 
+    color: #ffffff; 
+    transform: translateY(-2px);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1), 0 -6px 16px rgba(255, 255, 255, 0.2);
+  }
+  
+  .close-btn:active {
+    background-color: #44d888; 
+    color: white; 
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.1), inset -2px -2px 5px rgba(255, 255, 255, 0.2);
+    transform: translateY(0);
+  }
+  
